# trustlens-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  writeup.md
backend/: main.py  run.py
docs/: ai_music_video_guide.md  epic_roadmap.md  next_features.md  presentation_deck.md  public_demo.md  video_script.md
docs/assets/: README.md
extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
fixtures/: README.md  screenshot_manifest.json
fixtures/messages/: bank.txt  courier.txt  lottery.txt  qr.txt  romance.txt
scripts/: mcp_demo.py  package_release.ps1
src/trustlens_agent/: __init__.py  adk_agent.py  cli.py  mcp_server.py  openrouter_client.py  tools.py
tests/: test_mcp_server.py  test_ocr_fixtures.py  test_openrouter_client.py  test_tools.py
web/: README.md  index.html  package-lock.json  package.json
web/public/: config.js
web/src/: App.tsx  index.css
